syntax = "proto3";

import "operator.proto";

package gcloud;

service GcloudService {
	option (operator.name) = "gcloud";

	// Provision a development instance using the configured image.
	rpc CreateDevInstance(CreateDevInstanceRequest) returns (CreateDevInstanceResponse);
	// List all instances under the configured project.
	rpc ListInstances(ListInstancesRequest) returns (ListInstancesResponse);
	// Stop a running instance.
	rpc Stop(StopRequest) returns (StopResponse);
}

message CreateDevInstanceRequest {
	operator.Source source = 1;
}

message CreateDevInstanceResponse {
	operator.Output output = 1;
}

message StopRequest {
	operator.Source source = 1;
	string instance = 2;
	string zone = 3;
}

message StopResponse {
	operator.Output output = 1;
}

message Instance {
	string id = 1;
	string name = 2;
	string status = 3;
	string zone = 4;
}

message ListInstancesRequest {
	operator.Source source = 1;
	string project_id = 2;
}

message ListInstancesResponse {
	operator.Output output = 1;
	operator.Source source = 2;
	repeated Instance objects = 3;
}
